# haskell-smp-example

./: README.md  haskell-smp-example.cabal
app/: Main.hs
